--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-ui-router": "~0.2.13",
     "angular-bootstrap": "~0.12.1",
     "satellizer": "~0.9.4",
-    "angular-toastr": "~1.2.1"
+    "angular-toastr": "~1.2.1",
+    "angular-loading-bar": "~0.7.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
