--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
     "grunt-concurrent": "^1.0.0",
-    "grunt-connect-proxy": "^0.1.11",
+    "grunt-connect-proxy": "~0.2",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-concat": "^0.5.0",
@@ -35,7 +35,7 @@
     "http-proxy": "^1.10.1",
     "jasmine-core": "^2.2.0",
     "jshint-stylish": "^1.0.0",
-    "karma": "^0.12.31",
+    "karma": "^0.12.32",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^3.1.0",
